fix(homepage): update text layout and background colors for improved readability style(headerfooter): remove unnecessary background style on hover

--- a/src/components/headerfooter.css
+++ b/src/components/headerfooter.css
@@ -21,7 +21,7 @@
 
 .footer-nav, .header-nav {
   li:hover {
-    @apply font-semibold text-primaryHover bg-black5 scale-105;
+    @apply font-semibold text-primaryHover scale-105;
   }
 }
 
